fix bug ui because text too long

--- a/social-media-app/src/app/globals.css
+++ b/social-media-app/src/app/globals.css
@@ -5,6 +5,30 @@
 @import "~stream-chat-react/dist/css/v2/index.css";
 
 @layer base {
+
+  /* Remove scrollbar */
+  .remove-scrollbar::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+    border-radius: 0px;
+    display: none;
+  }
+
+  .remove-scrollbar::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  .remove-scrollbar::-webkit-scrollbar-thumb {
+    background: transparent;
+    border-radius: 0px;
+  }
+
+  .remove-scrollbar::-webkit-scrollbar-thumb:hover {
+    /* background: #1e2238; */
+    background: transparent;
+  }
+
+
   :root {
     --background: 224, 5%, 95%;
     --foreground: 240 10% 3.9%;
